--- a/style.css
+++ b/style.css
@@ -1,6 +1,29 @@
 body {
-  width: 100%;
-  background: url("https://s3.amazonaws.com/files.creativemarket.com/images/screenshots/products/25/258/258170/fish-scales-pattern-blue-f.jpg?1417500113"); }
+  width: 100%; }
+
+header {
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 50%;
+  color: "white";
+  text-align: center;
+  font-size: 50px;
+  font-family: 'Bershire Swash', Cursive;
+  border: 1px solid white;
+  background: white;
+  border-radius: 15px 15px 15px 15px; }
+
+hr {
+  color: black;
+  background-color: black;
+  border-bottom: 2px solid black; }
 
 .container {
   margin: 0 auto; }
+
+h1 {
+  font-size: 15px; }
+
+p {
+  font-family: Helvetica;
+  font-size: 13px; }
