--- a/views/admin.html
+++ b/views/admin.html
@@ -1,11 +1,12 @@
 
   <div class="container">
     <div class=row>
-      <div class="col-md-4">
+      <div class="col-md-4" ng-repeat="store in mainCtrl.store">
+
       <h1>{{fish.name}}</h1>
-      <img ng-src="{{images[0]}}">
-      <h2>{{fish.description}}</h2>
-      <h3>{{fish.price | currency}}</h3>
+      <img data-ng-src={{fish.image[0]}} />
+      <p>{{fish.description}}</p>
+      <h3>${{fish.price}}</h3>
 
 
       <form ng-submit="mainCtrl.addFish(newFish)">
@@ -20,7 +21,7 @@
       </form>
     </div>
     </div>
-  </div>  
+  </div>
 
 <!--
   <button ng-click="mainCtrl.alertMe()">Alert Me!!!</button>
