--- a/views/admin/admin.html
+++ b/views/admin/admin.html
@@ -1,24 +1,25 @@
-<div class="header">
 
-  <div class=class="header-left">
-    <a href="#/">Finn's Fancy Fish</a>
+  <div class="row products">
+
+    <div class="col-md-10 title">Finn's Fancy Fish</div>
+    <div class="col-md-2">
+    </div>
+  <div class="header-right">
+  <a href="#/cart" class="cart invert">
+    <i class="fa fa-shopping-cart fa-3x pull-right"></i>
+  </a>
+  <a href="#/admin" class="admin invert">admin.</a>
+  </div>
   </div>
 
-<!--   <div class="header-right">
-<a href="#/cart" class="cart invert">cart.</a>
-<a href="#/admin" class="admin inver">admin.</a>
-</div>
- -->
+
   <div class="container">
-    <div class=row>
-      <div class="col-md-4" ng-repeat="fish in mainCtrl.fishes">
-
-<!--       <h1>{{fish.name}}</h1>
-<img data-ng-src={{fish.image}} />
-<p>{{fish.description}}</p>
-<h3>${{fish.price}}</h3>
- -->
-
+    <div class="row product">
+      <div class="col-md-4 fish" ng-repeat="fish in mainCtrl.fishes">
+      <h3>{{fish.name}}</h3>
+      <img data-ng-src={{fish.image}} />
+      <p>{{fish.description}}</p>
+      <h3>Price: {{ fish.price | currency }}</h3>
       <form ng-submit="mainCtrl.addFish(newFish)">
         <input type="text" ng-model="newFish.name" placeholder="Name">
         <image type="image" ng-model="newFish.image" placeholder="image">
@@ -29,10 +30,28 @@
         <button type="delete">Delete Fish</button>
         <button type="submit">Add Fish</button>
       </form>
-    </div>
+
+      </div>
     </div>
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+    </div>
+  </div>
+   -->
 <!--
   <button ng-click="mainCtrl.alertMe()">Alert Me!!!</button>
 -->
