--- a/views/main.html
+++ b/views/main.html
@@ -1,28 +1,8 @@
 
 
-  <!--Row top of  products page-->
-  <div class="row products">
+  <div class="row">
 
-    <div class="col-md-10 title">Finn's Fancy Fish</div>
-    <div class="col-md-2">
-    </div>
-  <div class="header-right">
-  <a href="#/cart" class="cart invert">
-    <i class="fa fa-shopping-cart fa-3x pull-right"></i>
-  </a>
-  <a href="#/admin" class="admin invert">admin.</a>
-</div>
-</div>
-
-
-<div class="container">
-    <div class="row product">
-      <div class="col-md-4 fish" ng-repeat="fish in mainCtrl.fishes">
-      <h3>{{fish.name}}</h3>
-      <img data-ng-src={{fish.image}} />
-      <h3>Price: {{ fish.price | currency }}</h3>
-      <button class="add" ng-click="mainCtrl.addCartFish(fish)">Add</button>
-
-      </div>
-    </div>
+    <div class="col-md-12 title">Finn's Fancy Fish</div>
+    <div class="col-md-12 text-center"><a href="#/user/" class="cruiser">Cruiser</a><div>
+    <div class="col-md-12 text-center"><a href="#/admin/" class="captain">Captain</a></div>
   </div>
